--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       border-color: #0a58ca;
     }
 
-    scroll-top[hidden]::part(button) {
+    scroll-top::part(button button--hidden) {
       transform: translateY(calc(100% + 16px));
     }
   </style>
