Rename event name

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ scroll-top[hidden]::part(button) {
 
     ScrollTop.defineCustomElement();
 
-    document.addEventListener('scroll-top:visibilitychange', evt => {
+    document.addEventListener('scroll-top:visibility-change', evt => {
       console.log('event.detail ->', evt.detail);
     });
 
