--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ scroll-top::part(button):hover {
   border-color: #0a58ca;
 }
 
-scroll-top[hidden]::part(button) {
+scroll-top::part(button button--hidden) {
   /* Custom stylings for hidden state */
   transform: translateY(calc(100% + 16px));
 }
